--- a/src/index.html
+++ b/src/index.html
@@ -16,29 +16,30 @@
 
   <body>
     <div class="card" id="main-card">
-      <div id="image-box">
+      <div id="image-card">
         <img class="card" src="../images/image-equilibrium.jpg" alt="nft-picture" />
-        <!-- <img src="../images/icon-view.svg" alt="icon-view" /> -->
       </div>
-      <h1>Equilibrium #3429</h1>
-      <p>
+      <h1 class="text-margin">Equilibrium #3429</h1>
+      <p class="light-text text-margin" id="nft-description">
         Our Equilibrium collection promotes balance and calm.
       </p>
 
-      <div id="eth">
-        <img src="../images/icon-ethereum.svg" alt="nft-icon" />
-        <span class="text-green"> 0.041 ETH </span>
-      </div>
-
-      <div id="time">
-        <img src="../images/icon-clock.svg" alt="clock" />
-        <span> 3 days left </span>
+      <div class="text-margin" id="stats">
+        <div id="eth">
+          <img src="../images/icon-ethereum.svg" alt="nft-icon" />
+          <span> 0.041 ETH </span>
+        </div>
+  
+        <div id="time">
+          <img src="../images/icon-clock.svg" alt="clock" />
+          <span class="light-text"> 3 days left </span>
+        </div>
       </div>
 
       <hr />
-      <div id="creator-info">
+      <div class="text-margin" id="footer">
         <img src="../images/image-avatar.png" alt="profile-pic" />
-        <p>Creation of <span class="text-green"> jandrev </span></p>
+        <p class="light-text">Creation of <span> jandrev </span></p>
       </div>
     </div>
   </body>
