--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <div class="card" id="main-card">
       <div id="image-card">
         <img class="card" src="../images/image-equilibrium.jpg" alt="nft-picture" />
+        <img src="../images/icon-view.svg" alt="icon view">
       </div>
       <h1 class="text-margin">Equilibrium #3429</h1>
       <p class="light-text text-margin" id="nft-description">
