--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div class="card" id="main-card">
       <div id="image-card">
-        <img class="card" src="../images/image-equilibrium.jpg" alt="nft-picture" />
-        <img src="../images/icon-view.svg" alt="icon view">
+        <img class="card" src="./images/image-equilibrium.jpg" alt="nft-picture" />
+        <img src="./images/icon-view.svg" alt="icon view">
       </div>
       <h1 class="text-margin">Equilibrium #3429</h1>
       <p class="light-text text-margin" id="nft-description">
@@ -27,19 +27,19 @@
 
       <div class="text-margin" id="stats">
         <div id="eth">
-          <img src="../images/icon-ethereum.svg" alt="nft-icon" />
+          <img src="./images/icon-ethereum.svg" alt="nft-icon" />
           <span> 0.041 ETH </span>
         </div>
   
         <div id="time">
-          <img src="../images/icon-clock.svg" alt="clock" />
+          <img src="./images/icon-clock.svg" alt="clock" />
           <span class="light-text"> 3 days left </span>
         </div>
       </div>
 
       <hr />
       <div class="text-margin" id="footer">
-        <img src="../images/image-avatar.png" alt="profile-pic" />
+        <img src="./images/image-avatar.png" alt="profile-pic" />
         <p class="light-text">Creation of <span> jandrev </span></p>
       </div>
     </div>
