Final draft (commit on "main")

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <!-- displays site properly based on user's device -->
     <link
       rel="icon"
@@ -15,32 +15,40 @@
   </head>
 
   <body>
-    <div class="card" id="main-card">
-      <div id="image-card">
-        <img class="card" src="./images/image-equilibrium.jpg" alt="nft-picture" />
-        <img src="./images/icon-view.svg" alt="icon view">
-      </div>
-      <h1 class="text-margin">Equilibrium #3429</h1>
-      <p class="light-text text-margin" id="nft-description">
-        Our Equilibrium collection promotes balance and calm.
-      </p>
+    <div class="flex-item-center" id="outer-shadow">
+      <div class="flex-item-center" id="dim-shadow">
+        <div class="card" id="main-card">
+          <div id="image-card">
+            <img
+              class="card"
+              src="./images/image-equilibrium.jpg"
+              alt="nft-picture"
+            />
+            <img src="./images/icon-view.svg" alt="icon view" />
+          </div>
+          <h1 class="text-margin">Equilibrium #3429</h1>
+          <p class="light-text text-margin" id="nft-description">
+            Our Equilibrium collection promotes balance and calm.
+          </p>
 
-      <div class="text-margin" id="stats">
-        <div id="eth">
-          <img src="./images/icon-ethereum.svg" alt="nft-icon" />
-          <span> 0.041 ETH </span>
-        </div>
-  
-        <div id="time">
-          <img src="./images/icon-clock.svg" alt="clock" />
-          <span class="light-text"> 3 days left </span>
-        </div>
-      </div>
+          <div class="text-margin" id="stats">
+            <div id="eth">
+              <img src="./images/icon-ethereum.svg" alt="nft-icon" />
+              <span> 0.041 ETH </span>
+            </div>
 
-      <hr />
-      <div class="text-margin" id="footer">
-        <img src="./images/image-avatar.png" alt="profile-pic" />
-        <p class="light-text">Creation of <span> jandrev </span></p>
+            <div id="time">
+              <img src="./images/icon-clock.svg" alt="clock" />
+              <span class="light-text"> 3 days left </span>
+            </div>
+          </div>
+
+          <hr />
+          <div class="text-margin" id="footer">
+            <img src="./images/kaiman-nikaido.jpg" alt="profile-pic" />
+            <p class="light-text">Creation of <span> jandrev </span></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
